fix: Icon colors in dark mode

--- a/css/parts/top.less
+++ b/css/parts/top.less
@@ -85,6 +85,10 @@
     width:auto;
 }
 
+.chevron svg, .lang-symbol svg {
+    fill: var(--color-fg-true);
+}
+
 
 .trigger {
     transition: opacity 0,3s;
